# ana-rice

./: README.md  compose.yaml
.github/workflows/: backend-code-quality.yaml  backend-type-checking.yaml  frontend-code-quality.yaml  mypy.yaml  super-linter.yml
backend/: Dockerfile  app.py  pyproject.toml
backend/app/: __init__.py  config.py  models.py
backend/app/endpoints/: users.py
backend/app/routes/: images.py  users.py
backend/migrations/versions/: f8b323e37856_.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: ImageUpload.tsx  main.tsx
frontend/src/components/layout/: FileUpload.tsx  Navbar.tsx
frontend/src/components/ui/: spinner.tsx  typography.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  ImageUpload.tsx  RootPage.tsx
